<resources>
    <string name="app_name">NBA API</string>
    <string name="welcome">Welcome</string>
    <string name="start">start</string>
    <string name="to_app">NBA APP</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nbaimage">NBA</string>
    <string name="bla_bla">bla bla</string>
    <string name="Teams">Teams</string>
    <string name="Players">Players</string>
    <string name="Games">Games</string>
    <string name="choose">Choose</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="division">Division</string>
    <string name="Full_name">Full name</string>
    <string name="team">Team</string>
    <string name="teamAbbr">Team abbreviation</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="height_inches">Height inches</string>
    <string name="position">Position</string>
    <string name="weight_pounds">Weight pounds</string>
    <string name="share">Share</string>
    <string name="share_team_text">Team: %1$s\nFullName: %2$s\nCity: %3$s</string>
    <string name="select">SELECT</string>
    <string name="full_name">Full name</string>
    <string name="conference">Conference</string>
    <string name="about_text">Ovo je drugi projekat koji su .\nnapravili studenti Riad Pap i Azra Hadžihajdarević kao projekat iz predmeta Razvoj mobilnih aplikacija.\n\nAplikacija je rađena u programskom jeziku <b>Kotlin</b>.</string>


</resources>