<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nba_web_api.SelectFragment">
    <LinearLayout
        android:id="@+id/f_covid_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next_id"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/Chose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/chose"
                android:textColor="@color/colorSecondaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/games_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/Games" />

            <Button
                android:id="@+id/players_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/Players" />

            <Button
                android:id="@+id/teams_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/Teams" />


        </LinearLayout>

    </LinearLayout>


</layout>