<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nba_web_api.players.PlayersDetailFragment">

    <data>
        <variable
            name="viewModelPlayersDetail"
            type="com.example.nba_web_api.players.PlayersDetailViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/team_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_name_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Full_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_name_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModelPlayersDetail.selectedProperty.first_name + viewModelPlayersDetail.selectedProperty.last_name}"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_team_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_team_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModelPlayersDetail.selectedProperty.team.full_name}"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_teamAbbreviation_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/teamAbbr"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_teamAbbreviation_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModelPlayersDetail.selectedProperty.team.abbreviation}"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_height_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_height_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModelPlayersDetail.selectedProperty.height_feet + viewModelPlayersDetail.selectedProperty.height_inches}"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_weight_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weight"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_weight_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModelPlayersDetail.selectedProperty.weight_pounds}"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</layout>