<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.movies_web_api.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink_second_light">

        <ImageView
            android:id="@+id/movie_image_id"
            android:layout_width="115dp"
            android:layout_height="80dp"
            android:contentDescription="@string/movieimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            app:srcCompat="@drawable/ic_movie"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="115dp"
            android:layout_height="37dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.217" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@color/pink_dark"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/pink_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_image_id"
            app:layout_constraintVertical_bias="0.124" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="115dp"
            android:layout_height="77dp"
            android:gravity="center"
            android:text="@string/to_app"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.348" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>