<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nba_web_api.MainActivity">

    <data>
        <variable
            name="property"
            type="com.example.nba_web_api.network.dataNBA.DataPlayers" />
        <variable
            name="property_team"
            type="com.example.nba_web_api.network.dataNBA.PlayerTeam" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/players_list_id"
        android:layout_width="match_parent"
        android:layout_height="206dp">

        <LinearLayout
            android:layout_width="392dp"
            android:layout_height="142dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="137dp"
                android:layout_height="153dp"
                app:srcCompat="@drawable/ic_person" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="77dp"
                        android:layout_height="20dp"
                        android:width="20dp"
                        android:gravity="center"
                        android:text="@string/first_name"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.619"
                        app:layout_constraintStart_toEndOf="@+id/basketball"
                        app:layout_constraintTop_toBottomOf="@+id/team_name" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="@{property.first_name.toString()}"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="77dp"
                        android:layout_height="20dp"
                        android:width="20dp"
                        android:gravity="center"
                        android:text="@string/last_name"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.619"
                        app:layout_constraintStart_toEndOf="@+id/basketball"
                        app:layout_constraintTop_toBottomOf="@+id/team_name" />

                    <TextView
                        android:id="@+id/last_name1"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="@{property.last_name.toString()}"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/position"
                        android:layout_width="77dp"
                        android:layout_height="20dp"
                        android:width="20dp"
                        android:gravity="center"
                        android:text="@string/position"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.619"
                        app:layout_constraintStart_toEndOf="@+id/basketball"
                        app:layout_constraintTop_toBottomOf="@+id/team_name" />

                    <TextView
                        android:id="@+id/position1"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="@{property.position.toString()}"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team"
                        android:layout_width="77dp"
                        android:layout_height="20dp"
                        android:width="20dp"
                        android:gravity="center"
                        android:text="@string/team"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.619"
                        app:layout_constraintStart_toEndOf="@+id/basketball"
                        app:layout_constraintTop_toBottomOf="@+id/team_name" />

                    <TextView
                        android:id="@+id/team1"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="@{property.team.toString()}"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
